# EasyMCP2221

./: .readthedocs.yml  LICENSE  README.rst  doc_requirements.txt  pruebas.py  pyproject.toml  test.py
.github/workflows/: publish.yml
EasyMCP2221/: Constants.py  I2C_Slave.py  MCP2221.py  __init__.py  exceptions.py  smbus.py
GUI/: App.py  Control_frame.py  Device_frame.py  EasyMCP2221-GUI.pyw  Func_frames.py  GP_frame.py  I2Cscan_window.py  __main__.py  layout.py  mcp2221_gui.py  pruebas.py  pruebas_grid.py  pruebas_pack.py
MCP2221/: Constants.py  MCP2221.py  __init__.py
PyMCP2221A/: PyMCP2221A.py
docs/source/: api_reference.rst  bugs.rst  conf.py  examples.rst  gui.rst  history.rst  i2c_slave.rst  index.rst  install.rst  installation.rst  internals.rst  limitations_bugs.rst  (+3 more)
examples/: ADC.py  ADC_rolling_plot.py  ADC_rolling_plot_button.py  AMG8833.py  APDS9960_ambient.py  APDS9960_prox.py  BME280.py  BMP280.py  DAC.py  DAC_impedance_plot.py  DAC_sin.py  DAC_sin_dith.py  DAC_speed.py  DCF77.py  EEPROM_read.py  EEPROM_write.py  I2C_Slave_example.py  I2C_scan.py  PCA9685.py  PCF8591.py  V_I_plot.py  V_I_plot_advanced.py  V_I_plot_multiple_LEDs.py  V_T_plot_C.py  V_V_plot.py  battery_meter.py  device.py  eeprom2file.py  factory.py  file2eeprom.py  gpio_all_on.py  gpio_blink.py  gpio_logic_gate.py  gpio_mirror.py  gpio_read.py  gpio_simplest.py  i2cli.py  level_meter.py  rotary_encoder.py  select_by_serial.py  (+1 more)
misc/: .gitignore  I2C_transfer_rate.py  adc_dac_error.py  adc_dac_error_data.txt  adc_dac_vrm_crash.py  hid_test.c  test_eeprom.sh
test/: __init__.py  test_adcdac.py  test_device_selection.py  test_gpio.py  test_i2c.py  test_i2cslave.py  test_persistence.py
(+25 files in other folders)
