[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "EasyMCP2221"
version = "1.0.1"
authors = [
  { name="Reinoso Guzman", email="electronicayciencia@gmail.com" },
]
description = "Easy MCP2221 is a Python module to interface Microchip MCP2221 and MCP2221A."
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "hidapi",
]

[project.urls]
"Homepage" = "https://github.com/electronicayciencia/EasyMCP2221"
"Bug Tracker" = "https://github.com/electronicayciencia/EasyMCP2221/issues"
"Documentation" = "https://easymcp2221.readthedocs.io/"