[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "EasyMCP2221"
version = "0.0+unreleased.local"
authors = [
  { name="Reinoso Guzman", email="electronicayciencia@gmail.com" },
]
description = "Python module to interface with MCP2221 focused on ease of use."
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "hidapi",
]

[project.urls]
"Documentation" = "https://easymcp2221.readthedocs.io/"
"Homepage" = "https://github.com/electronicayciencia/EasyMCP2221"
"Bug Tracker" = "https://github.com/electronicayciencia/EasyMCP2221/issues"